--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
         "laravel-mix-svelte": "github:wewowweb/laravel-mix-svelte",
+        "svelte-routing": "^1.4.0",
         "svelte-spa-router": "^2.0.0"
     }
 }
