--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "laravel-mix-svelte": "^0.1.0",
@@ -26,6 +26,7 @@
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
         "laravel-mix-svelte": "github:wewowweb/laravel-mix-svelte",
+        "svelte-dropzone": "^1.0.6",
         "svelte-routing": "^1.4.0",
         "svelte-spa-router": "^2.0.0"
     }
