--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "laravel-mix-svelte": "github:wewowweb/laravel-mix-svelte",
         "svelte-dropzone": "^1.0.6",
         "svelte-routing": "^1.4.0",
-        "svelte-spa-router": "^2.0.0"
+        "svelte-spa-router": "^2.0.0",
+        "toastr": "^2.1.4"
     }
 }
